tests/test72.rael.exp
Error [2:5]: Expected string, stack or range on the left of 'at'
| log 12312 at 123
|     ^
